Angular Frontend (#3)
See README for more information.